--- a/trajopt_examples/CMakeLists.txt
+++ b/trajopt_examples/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   roslib
   trajopt
   tesseract_ros
+  tesseract_planning
   octomap_ros
   pcl_conversions
 )
@@ -47,6 +48,9 @@ target_link_libraries(${PROJECT_NAME}_car_seat_demo ${catkin_LIBRARIES})
 
 add_executable(${PROJECT_NAME}_puzzle_piece_auxillary_axes_plan src/puzzle_piece_auxillary_axes_plan.cpp)
 target_link_libraries(${PROJECT_NAME}_puzzle_piece_auxillary_axes_plan ${catkin_LIBRARIES})
+
+add_executable(${PROJECT_NAME}_pick_and_place_plan src/pick_and_place_plan.cpp)
+target_link_libraries(${PROJECT_NAME}_pick_and_place_plan ${catkin_LIBRARIES})
 
 # Mark executables and/or libraries for installation
 install(
