--- a/trajopt_examples/package.xml
+++ b/trajopt_examples/package.xml
@@ -19,6 +19,8 @@
   <depend>tesseract_planning</depend>
   <depend>octomap_ros</depend>
   <depend>pcl_conversions</depend>
+  <depend>gtest</depend>
+  <depend>rostest</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
