--- a/trajopt_examples/CMakeLists.txt
+++ b/trajopt_examples/CMakeLists.txt
@@ -24,26 +24,27 @@ include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
   SYSTEM ${PCL_INCLUDE_DIRS}
+  SYSTEM ${GTEST_INCLUDE_DIRS}
 )
 
-add_rostest_gtest(${PROJECT_NAME}_basic_cartesian_plan test/basic_cartesian_plan.test src/basic_cartesian_plan.cpp)
-target_link_libraries(${PROJECT_NAME}_basic_cartesian_plan ${PCL_LIBRARIES} ${catkin_LIBRARIES})
+add_executable(${PROJECT_NAME}_basic_cartesian_plan src/basic_cartesian_plan.cpp)
+target_link_libraries(${PROJECT_NAME}_basic_cartesian_plan ${GTEST_LIBRARIES} ${PCL_LIBRARIES} ${catkin_LIBRARIES})
 target_compile_options(${PROJECT_NAME}_basic_cartesian_plan PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
 
-add_rostest_gtest(${PROJECT_NAME}_glass_up_right_plan test/glass_up_right_plan.test src/glass_up_right_plan.cpp)
-target_link_libraries(${PROJECT_NAME}_glass_up_right_plan ${catkin_LIBRARIES})
+add_executable(${PROJECT_NAME}_glass_up_right_plan src/glass_up_right_plan.cpp)
+target_link_libraries(${PROJECT_NAME}_glass_up_right_plan ${GTEST_LIBRARIES} ${catkin_LIBRARIES})
 target_compile_options(${PROJECT_NAME}_glass_up_right_plan PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
 
-add_rostest_gtest(${PROJECT_NAME}_puzzle_piece_plan test/puzzle_piece_plan.test src/puzzle_piece_plan.cpp)
-target_link_libraries(${PROJECT_NAME}_puzzle_piece_plan ${catkin_LIBRARIES})
+add_executable(${PROJECT_NAME}_puzzle_piece_plan src/puzzle_piece_plan.cpp)
+target_link_libraries(${PROJECT_NAME}_puzzle_piece_plan ${GTEST_LIBRARIES} ${catkin_LIBRARIES})
 target_compile_options(${PROJECT_NAME}_puzzle_piece_plan PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
 
-add_rostest_gtest(${PROJECT_NAME}_car_seat_demo test/car_seat_demo.test src/car_seat_demo.cpp)
-target_link_libraries(${PROJECT_NAME}_car_seat_demo ${catkin_LIBRARIES})
+add_executable(${PROJECT_NAME}_car_seat_demo src/car_seat_demo.cpp)
+target_link_libraries(${PROJECT_NAME}_car_seat_demo ${GTEST_LIBRARIES} ${catkin_LIBRARIES})
 target_compile_options(${PROJECT_NAME}_car_seat_demo PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
 
-add_rostest_gtest(${PROJECT_NAME}_puzzle_piece_auxillary_axes_plan test/puzzle_piece_auxillary_axes_plan.test src/puzzle_piece_auxillary_axes_plan.cpp)
-target_link_libraries(${PROJECT_NAME}_puzzle_piece_auxillary_axes_plan ${catkin_LIBRARIES})
+add_executable(${PROJECT_NAME}_puzzle_piece_auxillary_axes_plan src/puzzle_piece_auxillary_axes_plan.cpp)
+target_link_libraries(${PROJECT_NAME}_puzzle_piece_auxillary_axes_plan ${GTEST_LIBRARIES} ${catkin_LIBRARIES})
 target_compile_options(${PROJECT_NAME}_puzzle_piece_auxillary_axes_plan PRIVATE -Wsuggest-override -Wconversion -Wsign-conversion)
 
 add_executable(${PROJECT_NAME}_pick_and_place_plan src/pick_and_place_plan.cpp)
@@ -62,3 +63,12 @@ install(
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+  add_rostest(test/basic_cartesian_plan.test)
+  add_rostest(test/car_seat_demo.test)
+  add_rostest(test/glass_up_right_plan.test)
+  add_rostest(test/puzzle_piece_plan.test)
+  add_rostest(test/puzzle_piece_auxillary_axes_plan.test)
+
+endif()
