--- a/trajopt/cmake/trajopt-config.cmake.in
+++ b/trajopt/cmake/trajopt-config.cmake.in
@@ -7,7 +7,7 @@ set(@PROJECT_NAME@_LIBRARIES "@PACKAGE_LIBRARIES@")
 
 include(CMakeFindDependencyMacro)
 find_dependency(Eigen3)
-find_dependency(Boost COMPONENTS system python thread program_options)
+find_package(Boost COMPONENTS system python thread program_options)
 find_dependency(console_bridge)
 find_dependency(trajopt_sco)
 find_dependency(trajopt_utils)
