--- a/trajopt/cmake/trajopt-config.cmake.in
+++ b/trajopt/cmake/trajopt-config.cmake.in
@@ -6,7 +6,7 @@ set_and_check(@PROJECT_NAME@_LIBRARY_DIRS "${PACKAGE_PREFIX_DIR}/lib")
 
 include(CMakeFindDependencyMacro)
 find_dependency(Eigen3)
-find_dependency(Boost COMPONENTS system python thread program_options)
+find_package(Boost COMPONENTS system python thread program_options)
 find_dependency(console_bridge)
 find_dependency(trajopt_sco)
 find_dependency(trajopt_utils)
