--- a/trajopt_sco/package.xml
+++ b/trajopt_sco/package.xml
@@ -8,6 +8,7 @@
 
   <depend>trajopt_utils</depend>
   <depend>libjsoncpp-dev</depend>
+  <depend>osqp</depend>
 
   <test_depend>gtest</test_depend>
 
