Add Generic Term Info for IFOPT
The operators of the error calculators are still empty

--- a/trajopt/cmake/trajopt-config.cmake.in
+++ b/trajopt/cmake/trajopt-config.cmake.in
@@ -12,6 +12,7 @@ else()
     find_dependency(Boost COMPONENTS system python thread program_options)
 endif()
 find_dependency(console_bridge)
+find_dependency(ifopt)
 find_dependency(trajopt_sco)
 find_dependency(trajopt_utils)
 find_dependency(tesseract)
