--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ env:
     - ROS_REPO=ros
     - CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Debug -DTRAJOPT_ENABLE_TESTING=ON -DTRAJOPT_ENABLE_RUN_TESTING=OFF"
     - ROSDEP_SKIP_KEYS="bullet3 fcl"
-    - AFTER_SCRIPT='catkin test -w $CATKIN_WORKSPACE --no-deps trajopt trajopt_ifopt trajopt_sco trajopt_sqp'
+    - AFTER_SCRIPT='catkin test -w $target_ws --no-deps trajopt trajopt_ifopt trajopt_sco trajopt_sqp'
     - PKGS_DOWNSTREAM=''
 
 matrix:
